--- a/jfreereport-ext/build.xml
+++ b/jfreereport-ext/build.xml
@@ -2,25 +2,18 @@
   ~ Copyright (c) 2006, Pentaho Corporation. All Rights Reserved.
   -->
 
-<!-- An ANT build file for JFreeReport. -->
+<!-- An ANT build file for the Pentaho Reporting Flow Engine. -->
 
-<!-- Written by David Gilbert and modified for libFonts by Thomas Morgner. -->
-<!-- 09-Nov-2005 -->
+<!-- Written by David Gilbert and modified for Pentaho Reporting Flow Engine by Thomas Morgner. -->
 
 <!-- This script has been tested with Ant version 1.6.2. -->
-
-<!-- Several temporary directories are created while the script is -->
-<!-- running: "../build" and "../distribution".  -->
-
-<!-- A "../javadoc" directory will be created for the Javadoc -->
-<!-- HTML pages. -->
 
 <!-- The script should work for the distribution and also the CVS -->
 <!-- repository. -->
 
-<project name="jfreereport" default="all" basedir="..">
+<project name="Pentaho Reporting Flow Engine Ext" default="all" basedir=".">
 
-  <import file="build-lib.xml"/>
+  <import file="ant/build-lib.xml"/>
 
   <!-- Initialisation. -->
   <target name="initialise" description="Initialise required settings.">
@@ -28,8 +21,7 @@
 
     <property name="builddir" value="build"/>
 
-    <dirname property="antfile.dir" file="${ant.file}"/>
-    <property file="ant/build.properties"/>
+    <property file="build.properties"/>
 
     <isClassAndFileAvailable class-name="org.jfree.JCommon"
                              property-name="lib.jcommon.present"
@@ -40,7 +32,7 @@
   <!-- Compile the libfonts classes -->
   <target name="compile" depends="initialise">
 
-    <build-all target-jar="${jfreereport-demo-jar-file}"
+    <build-all target-jar="${pref-ext-jar-file}"
                source-dir="source">
       <all-classpath>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
@@ -53,7 +45,7 @@
         <pathelement location="${libdir}/${jaxp-jar-file}"/>
         <pathelement location="${libdir}/${librepository-jar-file}"/>
         <pathelement location="${libdir}/${flute-jar-file}"/>
-        <pathelement location="${libdir}/${jfreereport-jar-file}"/>
+        <pathelement location="${libdir}/${pref-jar-file}"/>
         <pathelement location="${libdir}/${sac-jar-file}"/>
       </all-classpath>
       <all-resources>
@@ -81,10 +73,6 @@
         <include name="**/*.sqlds"/>
       </all-resources>
       <jar-args>
-        <manifest>
-          <attribute name="Main-Class" value="org.jfree.report.demo.DemoFrontend"/>
-          <attribute name="Class-Path" value="${manifest-lib-prefix}${hsqldb-jar-file} ${manifest-lib-prefix}${itext-jar-file} ${manifest-lib-prefix}${pixie-jar-file} ${manifest-lib-prefix}${commons-logging-jar-file} ${manifest-lib-prefix}${oscache-jar-file} ${manifest-lib-prefix}${sac-jar-file} ${manifest-lib-prefix}${jfreereport-jar-file} ${manifest-lib-prefix}${flute-jar-file} ${manifest-lib-prefix}${librepository-jar-file} ${manifest-lib-prefix}${jaxp-jar-file} ${manifest-lib-prefix}${libxml-jar-file} ${manifest-lib-prefix}${libformula-jar-file} ${manifest-lib-prefix}${liblayout-jar-file} ${manifest-lib-prefix}${libloader-jar-file} ${manifest-lib-prefix}${libfonts-jar-file} ${manifest-lib-prefix}${jcommon-serializer-jar-file} ${manifest-lib-prefix}${jcommon-jar-file}"/>
-        </manifest>
       </jar-args>
     </build-all>
   </target>
@@ -94,7 +82,7 @@
     <delete dir="javadoc"/>
     <mkdir dir="javadoc"/>
     <javadoc destdir="javadoc"
-      windowtitle="JFreeReport (version ${jfreereport.version})"
+      windowtitle="Pentaho Reporting Flow Engine - Ext (version ${pref.version})"
       overview="source/overview.html"
       linksource="true">
       <classpath>
@@ -108,7 +96,7 @@
         <pathelement location="${libdir}/${jaxp-jar-file}"/>
         <pathelement location="${libdir}/${librepository-jar-file}"/>
         <pathelement location="${libdir}/${flute-jar-file}"/>
-        <pathelement location="${libdir}/${jfreereport-jar-file}"/>
+        <pathelement location="${libdir}/${pref-jar-file}"/>
         <pathelement location="${libdir}/${sac-jar-file}"/>
       </classpath>
       <packageset dir="source" defaultexcludes="yes">
@@ -119,29 +107,24 @@
 
   <target name="fill-dist-dir">
     <!-- copy across README -->
-    <copy file="README"
-      tofile="distribution/README"/>
+    <copy file="README.txt"
+      tofile="distribution/README.txt"/>
 
     <!-- copy across LICENCE -->
-    <copy file="ChangeLog"
-      tofile="distribution/ChangeLog"/>
+    <copy file="ChangeLog.txt"
+      tofile="distribution/ChangeLog.txt"/>
 
     <!-- copy across LICENCE -->
     <copy file="licence-LGPL.txt"
       tofile="distribution/licence-LGPL.txt"/>
 
     <!-- copy across runtime jar file -->
-    <copy file="${jfreereport-demo-jar-file}"
-      tofile="distribution/${jfreereport-demo-jar-file}"/>
+    <copy file="${pref-ext-jar-file}"
+      tofile="distribution/${pref-ext-jar-file}"/>
 
     <!-- copy across source files -->
     <copy todir="distribution/source">
       <fileset dir="source"/>
-    </copy>
-
-    <!-- copy across source files -->
-    <copy todir="distribution/sql">
-      <fileset dir="sql"/>
     </copy>
 
     <!-- copy across source files -->
@@ -150,30 +133,30 @@
     </copy>
 
     <!-- copy across ant build file (this file) -->
-    <copy file="ant/build.xml"
-      tofile="distribution/ant/build.xml" failonerror="false"/>
+    <copy file="build.xml"
+      tofile="distribution/build.xml" failonerror="false"/>
     <copy file="ant/build-lib.xml"
       tofile="distribution/ant/build-lib.xml"/>
 
-    <copy file="ant/build.properties"
-      tofile="distribution/ant/build.properties"/>
+    <copy file="build.properties"
+      tofile="distribution/build.properties"/>
   </target>
 
   <!-- Make .zip distribution for libfonts -->
   <target name="zip" depends="compile">
-    <make-zip lib.version="${jfreereport.version}" lib.name="${jfreereport.name}"/>
+    <make-zip lib.version="${pref.version}" lib.name="${pref.name}"/>
   </target>
 
   <!-- Make .tar.gz distribution for libfonts -->
   <target name="targz" depends="compile">
-    <make-targz lib.version="${jfreereport.version}" lib.name="${jfreereport.name}"/>
+    <make-targz lib.version="${pref.version}" lib.name="${pref.name}"/>
   </target>
 
 
   <!-- ALL -->
   <target name="all"
     depends="compile,javadoc,zip,targz"
-    description="Compiles JFreeReport, builds the jar files, generates the Javadoc HTML pages and creates distribution files (.zip and .tar.gz).">
+    description="Compiles Pentaho Reporting Flow Engine Extension Pack, builds the jar files, generates the Javadoc HTML pages and creates distribution files (.zip and .tar.gz).">
   </target>
 
 </project>
