--- a/jfreereport-ext/build.properties
+++ b/jfreereport-ext/build.properties
@@ -3,13 +3,13 @@
 #
 
 #
-# JFreeReport ant build properties ...
+# Pentaho Reporting Flow Engine ant build properties ...
 
 ###########################################################
 #
 #  Global settings ...
-jfreereport.name=jfreereport-demo
-jfreereport.version=0.9.0
+pref.name=pentaho-reporting-flow-engine-ext
+pref.version=0.9.1
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -42,16 +42,16 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.0.7.jar
+jcommon-jar-file=jcommon-1.0.10.jar
 jcommon-serializer-jar-file=jcommon-serializer-0.1.0.jar
-libfonts-jar-file=liblayout-0.2.0.jar
-liblayout-jar-file=libfonts-0.2.2.jar
-libloader-jar-file=libloader-0.2.0.jar
-libxml-jar-file=libxml-0.2.0.jar
-libformula-jar-file=libformula-0.1.0.jar
-librepository-jar-file=librepository-0.1.0.jar
+libfonts-jar-file=liblayout-0.2.6.jar
+liblayout-jar-file=libfonts-0.2.6.jar
+libloader-jar-file=libloader-0.3.4.jar
+libxml-jar-file=libxml-0.9.6.jar
+libformula-jar-file=libformula-0.1.9.jar
+librepository-jar-file=librepository-0.1.1.jar
 flute-jar-file=flute-1.3-jfree-20061107.jar
-jfreereport-jar-file=jfreereport-0.9.0.jar
+pref-jar-file=pentaho-reporting-flow-engine-0.9.1.jar
 
 #
 # Optional libraries
@@ -69,4 +69,4 @@ itext-jar-file=itext-1.4.jar
 ##############################################################
 #
 # Generated files ...
-jfreereport-demo-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}.jar
+pref-ext-jar-file=${targetdir}${pref.name}-${pref.version}.jar
