--- a/jfreereport-demo/build.properties
+++ b/jfreereport-demo/build.properties
@@ -3,13 +3,13 @@
 #
 
 #
-# JFreeReport ant build properties ...
+# Pentaho Reporting Flow Engine ant build properties ...
 
 ###########################################################
 #
 #  Global settings ...
 pref.name=pentaho-reporting-flow-engine-demo
-pref.version=0.9.0-05
+pref.version=0.9.1
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -42,16 +42,16 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.0.8.jar
+jcommon-jar-file=jcommon-1.0.10.jar
 jcommon-serializer-jar-file=jcommon-serializer-0.1.0.jar
 libfonts-jar-file=liblayout-0.2.6.jar
-liblayout-jar-file=libfonts-0.2.4.jar
-libloader-jar-file=libloader-0.3.3.jar
-libxml-jar-file=libxml-0.9.3.jar
-libformula-jar-file=libformula-0.1.7.jar
-librepository-jar-file=librepository-0.1.0.jar
+liblayout-jar-file=libfonts-0.2.6.jar
+libloader-jar-file=libloader-0.3.4.jar
+libxml-jar-file=libxml-0.9.6.jar
+libformula-jar-file=libformula-0.1.9.jar
+librepository-jar-file=librepository-0.1.1.jar
 flute-jar-file=flute-1.3-jfree-20061107.jar
-jfreereport-jar-file=jfreereport-0.9.0-05.jar
+pref-jar-file=pentaho-reporting-flow-engine-0.9.1.jar
 
 #
 # Optional libraries
