--- a/libfonts/build.properties
+++ b/libfonts/build.properties
@@ -2,7 +2,7 @@
 #
 #  Global settings ...
 libfonts.name=libfonts
-libfonts.version=0.2.6
+libfonts.version=0.2.7
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -41,6 +41,7 @@ manifest-lib-prefix=lib/
 # Used by: module-misc-beanshell
 jcommon-jar-file=jcommon-1.0.10.jar
 libloader-jar-file=libloader-0.3.4.jar
+itext-jar-file=itext-1.4.jar
 
 ##############################################################
 #
