--- a/libfonts/build.xml
+++ b/libfonts/build.xml
@@ -48,6 +48,7 @@
     <build-all target-jar="${libfonts-jar-file}"
                source-dir="source">
       <all-classpath>
+        <pathelement location="${libdir}/${itext-jar-file}"/>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
         <pathelement location="${libdir}/${libloader-jar-file}"/>
       </all-classpath>
@@ -67,6 +68,7 @@
                source-dir="source"
                jdk-dir="${build.retro.jdk}">
       <all-classpath>
+        <pathelement location="${libdir}/${itext-jar-file}"/>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
         <pathelement location="${libdir}/${libloader-jar-file}"/>
       </all-classpath>
@@ -90,6 +92,7 @@
       overview="source/overview.html"
       linksource="true">
       <classpath>
+        <pathelement location="${libdir}/${itext-jar-file}"/>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
         <pathelement location="${libdir}/${libloader-jar-file}"/>
       </classpath>
